2008-02-08  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py: fix typo

2008-01-18  Dave Lehman  <dlehman@redhat.com>
	* system-config-kdump.spec: update to version 1.0.13

2008-01-18  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py: add 'halt' default action and passthrough 
	handling of unknown configuration items (#253603)

	* src/system-config-kdump.py: handle kdump service stop/start and only 
	prompt to reboot if memory reservation changed (#239324)

2007-10-18  Dave Lehman  <dlehman@redhat.com>

	* system-config-kdump.spec: Change License to GPL2+

2007-09-11  Dave Lehman  <dlehman@redhat.com>

	* system-config-kdump.spec: bump version.

2007-09-11  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py: warn users that a PAE kernel is required
	for 32-bit xen w/ >4G memory (#284851, patch from Jarod Wilson)

2007-08-29  Dave Lehman  <dlehman@redhat.com>

	* system-config-kdump.spec: bump version, update changelog.

2007-08-28  Dave Lehman  <dlehman@redhat.com>

	* src/system-config-kdump.py: Add support for enabling and configuring 
	kdump under Xen (Jarod Wilson, #243191)

2007-04-05  Dave Lehman  <dlehman@redhat.com>

	* system-config-kdump.spec: bump version, add changelog.

2007-02-06  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	only present ext2 and ext3 filesystem types as options (#220223)

	* src/system-config-kdump.py:
	align memory requirements with documented system limits (#228711)

	* system-config-kdump.spec: update changelog

2006-12-20  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	include kernel path in bootloader info list so bootloader
	config is modified correctly on ia64 (#220231)

	* src/system-config-kdump.glade:
	make locationEditButton ("Edit Location") translatable (#216596)

2006-12-18  Dave Lehman  <dlehman@redhat.com>
	* src/system-config-kdump.py:
	use file: URIs instead of local: (#218878)

	* system-config-kdump.spec:
	bump version
